products/iot/opentherm-monitor/templates/security-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: opentherm-monitor-security-policy
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: opentherm-monitor
  oidc:
    clientID: "5SLAhGgL6Ne52RafCB0RBYvMFS87UjXs2ewDUuDW"
    clientSecret:
      name: oidc-secret
    provider:
      issuer: https://authentik.feddema.dev/application/o/adguard/
    redirectURL: https://opentherm-monitor.feddema.dev/oauth2/callback
    logoutPath: /oauth2/logout
